# cfgutils

./: .gitignore  LICENSE  README.md  setup.cfg  tests.py
.github/workflows/: python-app.yml
cfgutils/: __init__.py  dominator.py  file_formats.py  os_utils.py  sorting.py  transformations.py
cfgutils/angr_utils/: __init__.py  ail_block_conv.py  ail_converter.py  ail_graph_conv.py  block_matcher.py  call_collector.py  feat_extractor.py  prettyify_ail.py
cfgutils/data/: __init__.py  generic_block.py  generic_statement.py
cfgutils/hashing/: __init__.py
cfgutils/hashing/function_sim_search/: __init__.py  feat_weights.py  flowgraph.py  sim_hasher.py
cfgutils/matrix/: munkres.py
cfgutils/regions/: __init__.py  graph_region.py  region_identifier.py  utils.py
cfgutils/similarity/: __init__.py  block_matcher_base.py  cfged.py  ged.py
cfgutils/similarity/ged/: __init__.py  abu_aisheh_ged.py  basque_cfged.py  hu_cfged.py  hu_ged.py
tests/: test_angr_cfg_tools.py  test_ged.py  test_hashing.py  test_math.py  test_region_identifier.py
