[metadata]
name = cfgutils
version = attr: cfgutils.__version__
url = https://github.com/mahaloz/cfgutils
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = BSD 2 Clause
license_files = LICENSE
description = A CFG utility library
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    graphviz
    pygraphviz

python_requires = >= 3.8
packages = find:
